# ECS_GAME

./: .gitignore  CMakeLists.txt  README.md
include/: Exception.hpp  Includes.hpp  Node.hpp
libs/sfml/: Makefile  SFMLStaticTargets.cmake  cmake_install.cmake
libs/sfml/doc/: mainpage.hpp
libs/sfml/src/SFML/: Makefile  cmake_install.cmake
src/: Exception.cpp  Node.cpp  main.cpp
src/common/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Types.hpp
src/common/Components/: AComponent.cpp  AComponent.hpp  IComponent.cpp  IComponent.hpp
src/common/Components/Controllable/: ControllableComponent.cpp  ControllableComponent.hpp
src/common/Components/Door/: DoorComponent.cpp  DoorComponent.hpp
src/common/Components/Energizers/: EnergizersComponent.cpp  EnergizersComponent.hpp
src/common/Components/Ghost/: GhostComponent.cpp  GhostComponent.hpp
src/common/Components/Pellets/: PelletsComponent.cpp  PelletsComponent.hpp
src/common/Components/Position/: PositionComponent.cpp  PositionComponent.hpp
src/common/Components/Text/: TextComponent.cpp  (+1 more)
src/game/: Game.cpp  Game.hpp  Map.cpp  Map.hpp
src/system/: ASystem.cpp  ASystem.hpp  ISystem.cpp  ISystem.hpp
src/system/Game/: GameSystem.cpp  GameSystem.hpp
src/system/Ghost/: GhostSystem.cpp  GhostSystem.hpp
src/system/Hitbox/: HitboxSystem.cpp  HitboxSystem.hpp
src/system/Movable/: MovableSystem.cpp  MovableSystem.hpp
src/system/Player/: PlayerSystem.cpp  PlayerSystem.hpp
src/system/Rectable/: RectableSystem.cpp  RectableSystem.hpp
src/system/Text/: TextSystem.cpp  TextSystem.hpp
(+27 files in other folders)
